libs/extractor/tests/snapshots/all_tests__props_direct_object_select-3.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Flex} from '@devup-ui/core'\n        <Flex opacity={{a:1, b:0.5, ...any}[\"some\"]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "opacity",
                value: ".5",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "opacity",
                value: "1",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "opacity",
                level: 0,
                identifier: "any[`some`]",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className={`a b ${{\n\t\"a\": \"d\",\n\t\"b\": \"e\"\n}[\"some\"]}`} style={{ \"--c\": any[`some`] }} />;\n",
}
