libs/extractor/tests/snapshots/all_tests__props_multi_expression.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {\n  Box,\n  Button as DevupButton,\n  Center,\n  css,\n} from '@devup-ui/core'\n\n<DevupButton\n    border={\n    {\n        primary: 'none',\n        default: '1px solid var(--border, #E4E4E4)',\n    }[variant]\n    }\n    className={className}\n    px={\n    {\n        false: { sm: '12px', md: '16px', lg: '20px' }[size],\n        true: { sm: '24px', md: '28px', lg: '32px' }[size],\n    }[(!!icon).toString()]\n    }\n/>\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "border",
                value: "1px solid var(--border,#E4E4E4)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "border",
                value: "none",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "12px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "20px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "24px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "28px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "32px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "12px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "20px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "24px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "28px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "32px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<button className={`${className || \"\"} ${{\n\t\"default\": \"a\",\n\t\"primary\": \"b\"\n}[variant] || \"\"} ${{\n\t\"false\": {\n\t\t\"lg\": \"c\",\n\t\t\"md\": \"d\",\n\t\t\"sm\": \"e\"\n\t}[size] || \"\",\n\t\"true\": {\n\t\t\"lg\": \"f\",\n\t\t\"md\": \"g\",\n\t\t\"sm\": \"h\"\n\t}[size] || \"\"\n}[(!!icon).toString()]} ${{\n\t\"false\": {\n\t\t\"lg\": \"i\",\n\t\t\"md\": \"j\",\n\t\t\"sm\": \"k\"\n\t}[size] || \"\",\n\t\"true\": {\n\t\t\"lg\": \"l\",\n\t\t\"md\": \"m\",\n\t\t\"sm\": \"n\"\n\t}[size] || \"\"\n}[(!!icon).toString()]}`} />;\n",
}
